--- a/index.html
+++ b/index.html
@@ -722,6 +722,7 @@
                                 <span class="skill-tag">Vue.js 3</span>
                                 <span class="skill-tag">Node.js</span>
                                 <span class="skill-tag">Express.js</span>
+                                <span class="skill-tag">React.js</span>
                                 <span class="skill-tag">Flask</span>
                                 <span class="skill-tag">Bootstrap</span>
                             </div>
@@ -794,6 +795,39 @@
                 </div>
 
                 <div class="experience-timeline">
+                    <div class="experience-item">
+    <div class="card">
+        <div class="experience-header">
+            <h3 class="experience-title">Creator & Full-Stack Developer</h3>
+            <p class="experience-company">Study Notebook App - Personal Project</p>
+            <span class="experience-date">September 2025 - October 2025</span>
+        </div>
+
+        <div class="experience-tech">
+            <span class="tech-tag">React</span>
+            <span class="tech-tag">Express.js</span>
+            <span class="tech-tag">Node.js</span>
+            <span class="tech-tag">Lunr.js</span>
+            <span class="tech-tag">IndexedDB</span>
+            <span class="tech-tag">AI APIs</span>
+            <span class="tech-tag">JavaScript</span>
+            <span class="tech-tag">HTML/CSS</span>
+        </div>
+
+        <div class="experience-description">
+            <ul>
+                <li>Developed an AI-enhanced study notebook web app for organizing and analyzing study notes efficiently.</li>
+                <li>Implemented full-text search using <b>Lunr.js</b> to enable fast and ranked results across notes, tags, and subjects.</li>
+                <li>Integrated optional AI features for <b>automatic summarization</b>, <b>quiz/question generation</b>, and <b>topic extraction</b>.</li>
+                <li>Built analytics dashboards to track study sessions, note activity, tag usage, and time spent per subject.</li>
+                <li>Designed responsive dark/light themes with data persistence via <b>localStorage</b> and <b>IndexedDB</b>.</li>
+                <li>Enabled data backup through <b>JSON/CSV export-import</b> with conflict resolution and validation.</li>
+                <li>Ensured secure and modular architecture with environment-based configuration and AI service abstraction.</li>
+            </ul>
+        </div>
+    </div>
+</div>
+
                     <div class="experience-item">
                         <div class="card">
                             <div class="experience-header">
@@ -1276,4 +1310,5 @@
 </body>
 
 </html>
+
 
