--- a/index.html
+++ b/index.html
@@ -722,7 +722,7 @@
                                 <span class="skill-tag">Vue.js 3</span>
                                 <span class="skill-tag">Node.js</span>
                                 <span class="skill-tag">Express.js</span>
-                                <span class="skill-tag">React.js</span>
+                                <span class="skill-tag">React</span>
                                 <span class="skill-tag">Flask</span>
                                 <span class="skill-tag">Bootstrap</span>
                             </div>
@@ -1310,5 +1310,6 @@
 </body>
 
 </html>
+
 
 
