Update print statement from add summar project

--- a/index.html
+++ b/index.html
@@ -827,6 +827,38 @@
         </div>
     </div>
 </div>
+                    <div class="experience-item">
+    <div class="card">
+        <div class="experience-header">
+            <h3 class="experience-title">Full-Stack Developer Intern</h3>
+            <p class="experience-company">Tunisair - Summer Internship</p>
+            <span class="experience-date">July 2024 - September 2024</span>
+        </div>
+
+        <div class="experience-tech">
+            <span class="tech-tag">Python</span>
+            <span class="tech-tag">Flask</span>
+            <span class="tech-tag">Angular</span>
+            <span class="tech-tag">Oracle Database</span>
+            <span class="tech-tag">JWT Authentication</span>
+            <span class="tech-tag">Machine Learning</span>
+            <span class="tech-tag">Scikit-learn</span>
+            <span class="tech-tag">Pandas</span>
+            <span class="tech-tag">Docker</span>
+        </div>
+
+        <div class="experience-description">
+            <ul>
+                <li>Developed <b>Tunisair Dashboard</b>, a full-stack web application for data-driven decision-making and operational optimization.</li>
+                <li>Implemented a secure architecture with <b>Flask (backend)</b> and <b>Angular (frontend)</b> integrated with an <b>Oracle database</b>.</li>
+                <li>Built advanced features including <b>flight data management</b>, <b>user administration</b>, and <b>JWT-based authentication</b>.</li>
+                <li>Integrated a <b>machine learning module</b> for <b>revenue prediction</b>, <b>customer segmentation</b>, and <b>route profitability analysis</b>.</li>
+                <li>Deployed the complete application using <b>Waitress</b> server and ensured scalability and security compliance (OWASP standards).</li>
+            </ul>
+        </div>
+    </div>
+</div>
+
 
                     <div class="experience-item">
                         <div class="card">
@@ -1310,6 +1342,7 @@
 </body>
 
 </html>
+
 
 
 
