--- a/index.html
+++ b/index.html
@@ -623,7 +623,7 @@
     <section class="hero" id="home">
         <div class="hero-content">
             <div class="profile-image">
-                <img src="Photo hamza jemaa.jpg" alt="" width="150" height="150" style="border-radius: 50%;">
+                <img src="Photo hamza jemaa.png" alt="" width="150" height="150" style="border-radius: 50%;">
             </div>
             <h1>Hamza Jemaa</h1>
             <p class="hero-subtitle">Software Engineer & Full-Stack Developer</p>
@@ -1342,6 +1342,7 @@
 </body>
 
 </html>
+
 
 
 
