Update print statement

--- a/index.html
+++ b/index.html
@@ -795,7 +795,44 @@
                 </div>
 
                 <div class="experience-timeline">
+<div class="experience-item">
+      
+
+                        <div class="card">
+    <div class="experience-header">
+        <h3 class="experience-title">Creator & Full-Stack Developer</h3>
+        <p class="experience-company">Employee Monitoring & Well-being System - Academic Project</p>
+        <span class="experience-date">October 2025 - December 2025</span>
+    </div>
+
+    <div class="experience-tech">
+        <span class="tech-tag">Python</span>
+        <span class="tech-tag">Flask</span>
+        <span class="tech-tag">OpenCV</span>
+        <span class="tech-tag">SocketIO</span>
+        <span class="tech-tag">Multiprocessing</span>
+        <span class="tech-tag">SQLite</span>
+        <span class="tech-tag">Oracle DB</span>
+        <span class="tech-tag">HTML/CSS/JS</span>
+    </div>
+
+    <div class="experience-description">
+        <ul>
+            <li>Developed a comprehensive AI-powered system to monitor employee productivity, health, and attention in real-time.</li>
+            <li>Implemented facial recognition and liveness detection for secure access control and safety monitoring.</li>
+            <li>Built real-time attention and posture tracking using <b>OpenCV</b> and concurrent processing with <b>Multiprocessing</b>.</li>
+            <li>Designed a responsive web interface with dashboards for both employees and managers, displaying productivity, health, and engagement metrics.</li>
+            <li>Integrated alerting system via <b>SocketIO</b> for immediate notifications on fatigue, distractions, or unauthorized access.</li>
+            <li>Ensured privacy and GDPR compliance with optional data anonymization, consent management, and encrypted storage in <b>Oracle</b> and <b>SQLite</b>.</li>
+            <li>Architected a modular and scalable backend with environment-based configuration and robust error handling.</li>
+        </ul>
+    </div>
+                        </div>
+</div>
+                    
                     <div class="experience-item">
+
+
     <div class="card">
         <div class="experience-header">
             <h3 class="experience-title">Creator & Full-Stack Developer</h3>
@@ -1029,7 +1066,38 @@
                             </div>
                         </div>
                     </div>
+<div class="experience-item">
+    <div class="card">
+    <div class="experience-header">
+        <h3 class="experience-title">Creator & Full-Stack Developer</h3>
+        <p class="experience-company">AI Video Processing Application - Personal Project</p>
+        <span class="experience-date">November 2025 - December 2025</span>
+    </div>
 
+    <div class="experience-tech">
+        <span class="tech-tag">Python</span>
+        <span class="tech-tag">OpenCV</span>
+        <span class="tech-tag">NumPy</span>
+        <span class="tech-tag">FFmpeg</span>
+        <span class="tech-tag">Haar Cascades</span>
+        <span class="tech-tag">HSV Color Segmentation</span>
+        <span class="tech-tag">AI/Computer Vision</span>
+        <span class="tech-tag">JavaScript/HTML/CSS</span>
+    </div>
+
+    <div class="experience-description">
+        <ul>
+            <li>Developed a modular video processing system that applies operations such as <b>grayscale, edge detection, Gaussian blur, sharpening, sepia tone, face detection, motion analysis, and object detection</b>.</li>
+            <li>Implemented a <b>parallel processing pipeline</b> to split videos into chunks, apply selected operations frame-by-frame, and reassemble the final video efficiently.</li>
+            <li>Generated real-time analytics including <b>face counts, motion intensity, object tracking, edge density</b>, and performance metrics for each operation.</li>
+            <li>Optimized the system for performance, allowing users to select lightweight filters for fast processing or combine multiple operations for deep analytics.</li>
+            <li>Designed the application to be flexible for multiple use cases: <b>security, privacy protection, video enhancement, and creative effects</b>.</li>
+            <li>Ensured modular architecture with clear separation of video processing operations and analytics reporting.</li>
+        </ul>
+    </div>
+</div>
+
+     </div> 
                     <div class="experience-item">
                         <div class="card">
                             <div class="experience-header">
@@ -1374,6 +1442,7 @@
 </body>
 
 </html>
+
 
 
 
