--- a/index.html
+++ b/index.html
@@ -1288,7 +1288,7 @@
         <div>
             <h4 style="color: var(--secondary-color); margin-bottom: 0.5rem;">2025</h4>
             <p>Supervised Learning with scikit-learn</p>
-            <small style="color: var(--medium-gray);">DataCamp (4 hrs, Completed Nov 30, 2024)</small>
+            <small style="color: var(--medium-gray);">DataCamp </small>
         </div>
 
     </div>
